--- a/laxyam/padyam/vIra-kathAH/madhurA-vijayam/raw/canto_1.xhtml
+++ b/laxyam/padyam/vIra-kathAH/madhurA-vijayam/raw/canto_1.xhtml
@@ -10,7 +10,7 @@ xmlns:epub="http://www.idpf.org/2007/ops">
 
 <div id="c1_p1" class="poem1">
 <p class="devpoem">
-महाकविमुखाम्भोजमणिपञ्जरशारिकाम् ।<br />
+महाकविमुखाम्भोजमणिपञ्जरशारिकाम् ।  
 चैतन्यजलधिज्योत्स्नां देवीं वन्दे सरस्वतीम् ॥ १ ॥ अनुष्टुभ्
 </p>
 <p>
@@ -20,12 +20,12 @@ xmlns:epub="http://www.idpf.org/2007/ops">
 </audio> 
 </p>
 <p class="enpoem">
-To the goddess of speech,<br />
-Sarasvatī,<br />
-do I bow –<br />
-a *śārikā* in the bejewelled birdcages<br />
-of the best bards’ lotus mouths,<br />
-the moonlight<br />
+To the goddess of speech,  
+Sarasvatī,  
+do I bow –  
+a *śārikā* in the bejewelled birdcages  
+of the best bards’ lotus mouths,  
+the moonlight  
 rousing the ocean of human consciousness.
 <span class="ncol">1</span>
 </p>
@@ -33,15 +33,15 @@ rousing the ocean of human consciousness.
 
 <div id="c1_p2" class="poem1">
 <p class="devpoem">
-निर्दोषाप्यगुणा वाणी न विद्वज्जनरञ्जिनी ।<br />
+निर्दोषाप्यगुणा वाणी न विद्वज्जनरञ्जिनी ।  
 पतिव्रताप्यरूपा स्त्री परिणेत्रे न रोचते ॥ २ ॥
 </p>
 <p class="enpoem">
-A poem may be sound,<br /> 
-but unless sweet<br />
-it will not delight the literati.<br />
-A wife may be faithful,<br />
-but unless pretty<br />
+A poem may be sound,   
+but unless sweet  
+it will not delight the literati.  
+A wife may be faithful,  
+but unless pretty  
 she will not please her spouse.
 <span class="ncol">2</span>
 </p>
@@ -49,13 +49,13 @@ she will not please her spouse.
 
 <div id="c1_p3" class="poem1">
 <p class="devpoem">
-न प्रार्थनीयः सत्काव्यश्रुत्यै सहृदयो जनः ।<br />
+न प्रार्थनीयः सत्काव्यश्रुत्यै सहृदयो जनः ।  
 स्वादुपुष्परसास्वादे कः प्रेरयति षट्पदम् ॥ ३ ॥
 </p>
 <p class="enpoem">
-A man of taste needs no encouragement<br />
-to listen to good poetry.<br />
-Who urges the bee<br />
+A man of taste needs no encouragement  
+to listen to good poetry.  
+Who urges the bee  
 to sip the sweet nectar seeping from blown buds?
 <span class="ncol">3</span>
 </p>
@@ -63,14 +63,14 @@ to sip the sweet nectar seeping from blown buds?
 
 <div id="c1_p4" class="poem1">
 <p class="devpoem">
-तन्मदीयमिदं काव्यं विबुधाः श्रोतुमर्हथ ।<br />
+तन्मदीयमिदं काव्यं विबुधाः श्रोतुमर्हथ ।  
 मधुराविजयं नाम चरितं कम्पभूपतेः ॥ ४ ॥
 </p>
 <p class="enpoem">
-Learned listeners!<br />
-Give ear<br />
-to this poem here,<br />
-*Madhurā Vijaya – The Conquest of Madhurā,*<br />
+Learned listeners!  
+Give ear  
+to this poem here,  
+*Madhurā Vijaya – The Conquest of Madhurā,*  
 the story of King Kampa.
 <span class="ncol">4</span>
 </p>
@@ -78,14 +78,14 @@ the story of King Kampa.
 
 <div id="c1_p5" class="poem1">
 <p class="devpoem">
-आसीत् समस्तसामन्तमस्तकन्यस्तशासनः ।<br />
+आसीत् समस्तसामन्तमस्तकन्यस्तशासनः ।  
 बुक्कराज इति ख्यातो राजा हरिहरानुजः ॥ ५ ॥
 </p>
 <p class="enpoem">
-There lived a king<br />
-named Bukkarāja,<br /> 
-the younger brother of Harihara.<br />
-Brave kings from each border<br />
+There lived a king  
+named Bukkarāja,   
+the younger brother of Harihara.  
+Brave kings from each border  
 with heads bent consented to his every order.
 <span class="ncol">5</span>
 </p>
@@ -93,13 +93,13 @@ with heads bent consented to his every order.
 
 <div id="c1_p6" class="poem1">
 <p class="devpoem">
-विवेकमेव सचिवं धनुरेव वरूथिनीम् ।<br />
+विवेकमेव सचिवं धनुरेव वरूथिनीम् ।  
 बाहुमेव रणोत्साहे यः सहायममन्यत ॥ ६ ॥
 </p>
 <p class="enpoem">
-When waging war,<br />
-he needed no counsel but his own judgement,<br />
-no troops but his own bow<br />
+When waging war,  
+he needed no counsel but his own judgement,  
+no troops but his own bow  
 no allies but his two arms.
 <span class="ncol">6</span>
 </p>
@@ -107,7 +107,7 @@ no allies but his two arms.
 
 <div id="c1_p7" class="poem1">
 <p class="devpoem">
-विरोधिवाहिनीनाथविक्षोभणपटीयसा ।<br />
+विरोधिवाहिनीनाथविक्षोभणपटीयसा ।  
 भुजेन भूभृता यस्य प्राप्ता कीर्तिमयी सुधा ॥ ७ ॥
 </p>
 <p>
@@ -117,25 +117,24 @@ no allies but his two arms.
 </audio> 
 </p>
 <p class="enpoem">
-Roiling the whole host of hostile kings,<br />
-vast as the ocean,<br />
-with the mountain of his globe-bearing arm –<br />
-child’s play for him –<br />
-he produced his own *amṛta*, fame.<span class="ref">
-<sup><a epub:type="noteref" href="#c1_en1">1</a></sup></span>
+Roiling the whole host of hostile kings,  
+vast as the ocean,  
+with the mountain of his globe-bearing arm –  
+child’s play for him –  
+he produced his own *amṛta*, fame.[^1]
 <span class="ncol">7</span>
 </p>
 </div>
 
 <div id="c1_p8" class="poem1">
 <p class="devpoem">
-परिपन्थिनृपप्राणपवनाहारदारुणः ।<br />
+परिपन्थिनृपप्राणपवनाहारदारुणः ।  
 असृजद्भुजगो यस्य कृपाणः कीर्तिकञ्चुकम् ॥ ८ ॥
 </p>
 <p class="enpoem">
-The sword he wielded was a snake,<br />
-violently devouring the very air his adversaries breathed,<br />
-and slewing off the celebrity he secured<br />
+The sword he wielded was a snake,  
+violently devouring the very air his adversaries breathed,  
+and slewing off the celebrity he secured  
 as its now whitened skin.
 <span class="ncol">8</span>
 </p>
@@ -143,46 +142,44 @@ as its now whitened skin.
 
 <div id="c1_p9" class="poem1">
 <p class="devpoem">
-कलिकालमहाघर्मप्लुष्टो धर्ममहीरुहः ।<br />
+कलिकालमहाघर्मप्लुष्टो धर्ममहीरुहः ।  
 यस्य दानाम्बुसेकेन पुनरङ्कुरितोऽभवत् ॥ ९ ॥
 </p>
 <p class="enpoem">
-The tree of *dharma*,<br />
-seared clear of moisture<br />
-by the horrendous heat of the accursed Kali Yuga,<br />
-sprouted afresh with the water he poured<br />
-while handing out gifts<span class="ref">
-<sup><a epub:type="noteref" href="#c1_en2">2</a></sup></span>.
+The tree of *dharma*,  
+seared clear of moisture  
+by the horrendous heat of the accursed Kali Yuga,  
+sprouted afresh with the water he poured  
+while handing out gifts[^2].
 <span class="ncol">9</span>
 </p>
 </div>
 
 <div id="c1_p10" class="poem1">
 <p class="devpoem">
-यस्याङ्घ्रिपीठसङ्घर्षरेखालाञ्छितमौलयः ।<br />
+यस्याङ्घ्रिपीठसङ्घर्षरेखालाञ्छितमौलयः ।  
 आशास्वरिनृपा एव जयस्तम्भतया स्थिताः ॥ १० ॥
 </p>
 <p class="enpoem">
-The very kings who had opposed him<br />
-became his victory pillars<br />
-spread in every direction,<br />
-their heads scarred with lines<br />
-scored from prostrating at his footstool.<span class="ref">
-<sup><a epub:type="noteref" href="#c1_en3">3</a></sup></span>
+The very kings who had opposed him  
+became his victory pillars  
+spread in every direction,  
+their heads scarred with lines  
+scored from prostrating at his footstool.[^3]
 <span class="ncol">10</span>
 </p>
 </div>
 
 <div id="c1_p11" class="poem1">
 <p class="devpoem">
-बद्धाः सभाङ्गणे यस्य भान्ति स्म जयसिन्धुराः ।<br />
+बद्धाः सभाङ्गणे यस्य भान्ति स्म जयसिन्धुराः ।  
 बन्दीकृता इवाम्भोदा जैत्रयात्रानिरोधिनः ॥ ११ ॥
 </p>
 <p class="enpoem">
-War elephants<br />
-stood shackled in the palace courtyard<br />
-as though they were hulking rainclouds<br />
-thrown into chains<br />
+War elephants  
+stood shackled in the palace courtyard  
+as though they were hulking rainclouds  
+thrown into chains  
 for daring to halt his military assaults.
 <span class="ncol">11</span>
 </p>
@@ -191,14 +188,14 @@ for daring to halt his military assaults.
 
 <div id="c1_p12" class="poem1">
 <p class="devpoem">
-तस्यासीद्विजया नाम विजयार्जितसम्पदः ।<br />
+तस्यासीद्विजया नाम विजयार्जितसम्पदः ।  
 राजधानी बुधैः श्लाघ्या शक्रस्येवामरावती ॥ १२ ॥
 </p>
 <p class="enpoem">
-As Indra has Amarāvatī glorified by the gods,<br />
-the King –<br />
-grown rich on triumph –<br />
-had for his capital a city celebrated by poets,<br />
+As Indra has Amarāvatī glorified by the gods,  
+the King –  
+grown rich on triumph –  
+had for his capital a city celebrated by poets,  
 known to all as Vijayā 
 – ‘Triumph’.
 <span class="ncol">12</span>
@@ -207,13 +204,13 @@ known to all as Vijayā
 
 <div id="c1_p13" class="poem1">
 <p class="devpoem">
-सुरलोकान्तसंक्रान्तस्वर्णदीमत्सरादिव ।<br />
+सुरलोकान्तसंक्रान्तस्वर्णदीमत्सरादिव ।  
 परिखाकारतां यान्त्या परीता तुङ्गभद्र‌‍या ॥ १३ ॥
 </p>
 <p class="enpoem">
-The Tuṅgabhadrā circled the city,<br /> 
-serving as a moat,<br />
-as if to rival the Gaṅgā<br />
+The Tuṅgabhadrā circled the city,   
+serving as a moat,  
+as if to rival the Gaṅgā  
 who gushes around the bounds of the gods’ domain.
 <span class="ncol">13</span>
 </p>
@@ -221,14 +218,14 @@ who gushes around the bounds of the gods’ domain.
 
 <div id="c1_p14" class="poem1">
 <p class="devpoem">
-लक्ष्मीलतालवालेन क्ष्मावधूनाभिशोभिना ।<br />
+लक्ष्मीलतालवालेन क्ष्मावधूनाभिशोभिना ।  
 चक्राचलप्रकारेण प्राकारेण परिष्कृता ॥ १४ ॥
 </p>
 <p class="enpoem">
-A smart rampart wreathed the royal city of Vijayā,<br />
-as though it was<br />
-the pool in which her flowering fortune-creeper flourished,<br />
-the lovely navel of Lady Earth<br />
+A smart rampart wreathed the royal city of Vijayā,  
+as though it was  
+the pool in which her flowering fortune-creeper flourished,  
+the lovely navel of Lady Earth  
 or a circle of soaring mountains.
 <span class="ncol">14</span>
 </p>
@@ -236,13 +233,13 @@ or a circle of soaring mountains.
 
 <div id="c1_p15" class="poem1">
 <p class="devpoem">
-यशःस्तोमैरिवाशेषनगरीविजयार्जितैः ।<br />
+यशःस्तोमैरिवाशेषनगरीविजयार्जितैः ।  
 सौधैः प्रकाशितोत्सेधा शरदम्भोदपाण्डरैः ॥ १५ ॥
 </p>
 <p class="enpoem">
-Mansions white as clouds in Śarad –<br />
-drifts of fame<br />
-amassed by outshining all other cities –<br />
+Mansions white as clouds in Śarad –  
+drifts of fame  
+amassed by outshining all other cities –  
 spoke of her stature.
 <span class="ncol">15</span>
 </p>
@@ -250,14 +247,14 @@ spoke of her stature.
 
 <div id="c1_p16" class="poem1">
 <p class="devpoem">
-यत्सौधचन्द्रशालासु विहरन्त्यो मृगेक्षणाः ।<br />
+यत्सौधचन्द्रशालासु विहरन्त्यो मृगेक्षणाः ।  
 शशाङ्कमवलम्बन्ते मुक्ताकन्दुकशङ्क‍या ॥ १६ ॥
 </p>
 <p class="enpoem">
-The doe-eyed ladies<br />
-playing in the sky-high attics<br />
-of the city’s palaces<br />
-would try to catch the full moon,<br />
+The doe-eyed ladies  
+playing in the sky-high attics  
+of the city’s palaces  
+would try to catch the full moon,  
 foolishly mistaking it for their pearl-embroidered ball.
 <span class="ncol">16</span>
 </p>
@@ -265,7 +262,7 @@ foolishly mistaking it for their pearl-embroidered ball.
 
 <div id="c1_p17" class="poem1">
 <p class="devpoem">
-पद्मरागोपलोत्कीर्णप्रासादप्रान्तवर्तिनः ।<br />
+पद्मरागोपलोत्कीर्णप्रासादप्रान्तवर्तिनः ।  
 सन्ततं यत्र दृश्यन्ते सान्ध्या इव बलाहकाः ॥ १७ ॥
 </p>
 <p>
@@ -275,9 +272,9 @@ foolishly mistaking it for their pearl-embroidered ball.
 </audio> 
 </p>
 <p class="enpoem">
-Clouds<br />
-roaming around her ruby-reddened rooftops<br />
-seemed to be permanently stained<br />
+Clouds  
+roaming around her ruby-reddened rooftops  
+seemed to be permanently stained  
 by the setting sun.
 <span class="ncol">17</span>
 </p>
@@ -286,15 +283,15 @@ by the setting sun.
 
 <div id="c1_p18" class="poem1">
 <p class="devpoem">
-सन्ध्यासु यत्र निर्यान्ति जालेभ्यो धूपराजयः ।<br />
+सन्ध्यासु यत्र निर्यान्ति जालेभ्यो धूपराजयः ।  
 अन्तःप्रदीपिकालोकचकितध्वान्तसन्निभाः ॥ १८ ॥
 </p>
 <p class="enpoem">
-Every evening,<br />
-trails of incense smoke would race<br />
-out of the city’s windows,<br />
-as though they were gangs of darkness<br />
-frightened into flight at the sight<br />
+Every evening,  
+trails of incense smoke would race  
+out of the city’s windows,  
+as though they were gangs of darkness  
+frightened into flight at the sight  
 of the oil lamps standing guard within.
 <span class="ncol">18</span>
 </p>
@@ -302,14 +299,14 @@ of the oil lamps standing guard within.
 
 <div id="c1_p19" class="poem1">
 <p class="devpoem">
-देवायी नाम तस्यासीद्देवी वसुमतीपतेः ।<br />
+देवायी नाम तस्यासीद्देवी वसुमतीपतेः ।  
 पद्मा पद्मेक्षणस्येव शङ्करस्येव पार्वती ॥ १९ ॥
 </p>
 <p class="enpoem">
-The chief queen of this emperor of the earth,<br /> 
-known as Devāyī,<br />
-was to him<br />
-as the lotus-abiding Lakṣmī to the lotus-eyed Viṣṇu,<br />
+The chief queen of this emperor of the earth,   
+known as Devāyī,  
+was to him  
+as the lotus-abiding Lakṣmī to the lotus-eyed Viṣṇu,  
 as to Śiva Pārvatī.
 <span class="ncol">19</span>
 </p>
@@ -317,18 +314,18 @@ as to Śiva Pārvatī.
 
 <div id="c1_p20" class="poem1">
 <p class="devpoem">
-कर्णाटलोकनयनोत्सवपूर्णचन्द्रः<br />
-साकं तया हृदयसम्मतया नरेन्द्रः ।<br />
-कालोचितान्यनुभवन् क्रमशः सुखानि<br /> 
+कर्णाटलोकनयनोत्सवपूर्णचन्द्रः  
+साकं तया हृदयसम्मतया नरेन्द्रः ।  
+कालोचितान्यनुभवन् क्रमशः सुखानि   
 वीरश्चिराय विजयापुरमध्यवात्सीत् ॥ २० ॥ वसन्ततिलका
 </p>
 <p class="enpoem">
-This brave king,<br />
-the brightening full moon<br />
-upon which his Karṇāṭa people gazed in delight,<br />
-dwelled in Vijayā for many a year,<br />
-enjoying in turn the pleasures suited to each stage of life,<br />
-with her<br />
+This brave king,  
+the brightening full moon  
+upon which his Karṇāṭa people gazed in delight,  
+dwelled in Vijayā for many a year,  
+enjoying in turn the pleasures suited to each stage of life,  
+with her  
 his soul-mate.
 <span class="ncol">20</span>
 </p>
