--- a/laxyam/padyam/vIra-kathAH/madhurA-vijayam/raw/canto_2.xhtml
+++ b/laxyam/padyam/vIra-kathAH/madhurA-vijayam/raw/canto_2.xhtml
@@ -10,15 +10,15 @@ xmlns:epub="http://www.idpf.org/2007/ops">
 
 <div id="c2_p1" class="poem1">
 <p class="devpoem">
-अथास्य वंशप्रतिरोहबीजं<br />
-महीभुजो गर्भमधत्त देवी ।<br />
-जगत्त्रयोद्भूतिनिदानभूतं<br />
+अथास्य वंशप्रतिरोहबीजं  
+महीभुजो गर्भमधत्त देवी ।  
+जगत्त्रयोद्भूतिनिदानभूतं  
 तेजो विधातुः प्रथमेव सृष्टिः ॥ १ ॥ उपजातिः
 </p>
 <p class="enpoem">
-In time the King sired upon the Queen<br />
-the seed which would perpetuate the dynasty –<br />
-just as the creator sires upon primaeval matter<br />
+In time the King sired upon the Queen  
+the seed which would perpetuate the dynasty –  
+just as the creator sires upon primaeval matter  
 the energy which brings into being the three worlds.
 <span class="ncol">1</span>
 </p>
@@ -26,18 +26,18 @@ the energy which brings into being the three worlds.
 
 <div id="c2_p2" class="poem1">
 <p class="devpoem">
-मुखेन तन्वी शरपाण्डरेण<br />
-विमुक्तरत्नाभरणा विरेजे ।<br />
-विलूनराजीववना दिनान्ते<br />
+मुखेन तन्वी शरपाण्डरेण  
+विमुक्तरत्नाभरणा विरेजे ।  
+विलूनराजीववना दिनान्ते  
 छायाशशाङ्केन शरन्नदीव ॥ २ ॥
 </p>
 <p class="enpoem">
-Slender,<br />
-no more oppressed by ornaments,<br />
-her round face reed-pale,<br />
-the Queen resembled a river run to a trickle in Śarad,<br />
-no longer blanketed in day-blossoming lotus blooms,<br />
-harbouring the orbed moon<br />
+Slender,  
+no more oppressed by ornaments,  
+her round face reed-pale,  
+the Queen resembled a river run to a trickle in Śarad,  
+no longer blanketed in day-blossoming lotus blooms,  
+harbouring the orbed moon  
 as night draws near.
 <span class="ncol">2</span>
 </p>
@@ -45,15 +45,15 @@ as night draws near.
 
 <div id="c2_p3" class="poem1">
 <p class="devpoem">
-अनन्यसामान्यभुजापदान-<br />
-मुत्पत्स्यमानं तनयं नृपस्य ।<br />
-अनारतं वीररसानुबन्धं<br />
+अनन्यसामान्यभुजापदान-  
+मुत्पत्स्यमानं तनयं नृपस्य ।  
+अनारतं वीररसानुबन्धं  
 न्यवेदयद्दौहृदमेव देव्याः ॥ ३ ॥
 </p>
 <p class="enpoem">
-The pregnant queen’s cravings<br /> 
-ever veered towards the heroic,<br /> 
-suggesting that the royal heir she would soon bear<br />
+The pregnant queen’s cravings   
+ever veered towards the heroic,   
+suggesting that the royal heir she would soon bear  
 would author deeds assayed by no other.
 <span class="ncol">3</span>
 </p>
@@ -61,18 +61,18 @@ would author deeds assayed by no other.
 
 <div id="c2_p4" class="poem1">
 <p class="devpoem">
-अपारयन्ती चरितैणशाबं<br />
-क्रीडाचलोपान्तमपि प्रयातुम् ।<br />
-आखेटरागादधिरोढुमैच्छ-<br />
+अपारयन्ती चरितैणशाबं  
+क्रीडाचलोपान्तमपि प्रयातुम् ।  
+आखेटरागादधिरोढुमैच्छ-  
 न्माद्यन्मृगेन्द्रान् मलयाद्रिकूटान् ॥ ४ ॥
 </p>
 <p class="enpoem">
-So spent was her strength<br />
-she couldn’t even reach<br />
-the foot of the ornamental hill<br />
-where fawns scampered,<br />
-yet in her thirst for a kill<br />
-she dreamed of climbing the mighty Malaya mountain<br />
+So spent was her strength  
+she couldn’t even reach  
+the foot of the ornamental hill  
+where fawns scampered,  
+yet in her thirst for a kill  
+she dreamed of climbing the mighty Malaya mountain  
 to hunt maddened lions.
 <span class="ncol">4</span>
 </p>
@@ -80,59 +80,59 @@ to hunt maddened lions.
 
 <div id="c2_p5" class="poem1">
 <p class="devpoem">
-पृथ्वी रथः सारथिरब्जसूतिः<br />
-शेषेण सज्यं धनुरद्रिराजः ।<br />
-शरश्च शौरिः किल हन्त लक्ष्यं<br />
+पृथ्वी रथः सारथिरब्जसूतिः  
+शेषेण सज्यं धनुरद्रिराजः ।  
+शरश्च शौरिः किल हन्त लक्ष्यं  
 त्रयं पुरामित्यहसत् पुरारिम् ॥ ५ ॥
 </p>
 <p class="enpoem">
-‘The earth for a chariot;<br />
-Brahmā himself the charioteer.<br />
-The king of snakes serving as bowstring,<br />
-and Mount Meru his bow.<br />
-And, so they say,<br />
-no less than Śauri<span class="ref"><sup><a epub:type="noteref" href="#c2_en1">1</a></sup></span> as his shaft.<br />
-To fight whom?<br />
-A mere triad of cities!’<br />
-Thus did she scorn Śiva,<br />
-conqueror of the three cities.<span class="ref"><sup><a epub:type="noteref" href="#c2_en2">2</a></sup></span>
+‘The earth for a chariot;  
+Brahmā himself the charioteer.  
+The king of snakes serving as bowstring,  
+and Mount Meru his bow.  
+And, so they say,  
+no less than Śauri[^1] as his shaft.  
+To fight whom?  
+A mere triad of cities!’  
+Thus did she scorn Śiva,  
+conqueror of the three cities.[^2]
 <span class="ncol">5</span>
 </p>
 </div>
 
 <div id="c2_p6" class="poem1">
 <p class="devpoem">
-सौभाग्यगन्धद्विपदानलेखा<br />
-रराज तस्या नवरोमराजिः ।<br />
-तेजोनिधिं गर्भतले निषण्णं<br />
+सौभाग्यगन्धद्विपदानलेखा  
+रराज तस्या नवरोमराजिः ।  
+तेजोनिधिं गर्भतले निषण्णं  
 कालोरगी रक्षितुमागतेव ॥ ६ ॥
 </p>
 <p class="enpoem">
-A fresh line of fine hair flashed below her navel –<br />
-glistening like a streak of ichor from<br />
-the mighty elephant of her waxing fortune –<br />
-as though it were a cobra<br />
-come to guard the luminous treasure<br />
-buried deep within her womb.<span class="ref"><sup><a epub:type="noteref" href="#c2_en3">3</a></sup></span>
+A fresh line of fine hair flashed below her navel –  
+glistening like a streak of ichor from  
+the mighty elephant of her waxing fortune –  
+as though it were a cobra  
+come to guard the luminous treasure  
+buried deep within her womb.[^3]
 <span class="ncol">6</span>
 </p>
 </div>
 
 <div id="c2_p7" class="poem1">
 <p class="devpoem">
-अथ प्रशस्ते दिवसे समस्तै-<br />
-र्मौहूर्तिकैः साधितपुण्यलग्ने ।<br />
-असूत सूनुं नरनाथपत्नी<br />
+अथ प्रशस्ते दिवसे समस्तै-  
+र्मौहूर्तिकैः साधितपुण्यलग्ने ।  
+असूत सूनुं नरनाथपत्नी  
 देवी महासेनमिवेन्दुमौलेः ॥ ७ ॥
 </p>
 <p class="enpoem">
-Then on the happy day –<br />
-declared by astrologers near and far<br />
-to be blessed with an auspicious star –<br />
-the earthly lord’s lady<br />
-bore a son who would lead a mighty army;<br />
-just as Pārvatī,<br />
-consort to the moon-crested Śiva,<br />
+Then on the happy day –  
+declared by astrologers near and far  
+to be blessed with an auspicious star –  
+the earthly lord’s lady  
+bore a son who would lead a mighty army;  
+just as Pārvatī,  
+consort to the moon-crested Śiva,  
 bore Kumāra, leader of heaven’s army.
 <span class="ncol">7</span>
 </p>
@@ -140,15 +140,15 @@ bore Kumāra, leader of heaven’s army.
 
 <div id="c2_p8" class="poem1">
 <p class="devpoem">
-महौजसस्तस्य निजैर्यशोभि-<br />
-रुद्वेलदुग्धोदधिपूरगौरैः ।<br />
-प्रक्षालितानीव तदा बभूवु-<br />
+महौजसस्तस्य निजैर्यशोभि-  
+रुद्वेलदुग्धोदधिपूरगौरैः ।  
+प्रक्षालितानीव तदा बभूवु-  
 र्धृतप्रसादानि दिशां मुखानि ॥ ८ ॥
 </p>
 <p class="enpoem">
-At that moment,<br />
-the faces of the directions grew clear<br />
-as if washed clean by the gleaming child’s glory,<br />
+At that moment,  
+the faces of the directions grew clear  
+as if washed clean by the gleaming child’s glory,  
 white as the flood of the milky sea spilling its shores.
 <span class="ncol">8</span>
 </p>
@@ -156,16 +156,16 @@ white as the flood of the milky sea spilling its shores.
 
 <div id="c2_p9" class="poem1">
 <p class="devpoem">
-आगामिनीमध्वरहव्यसिद्धिं<br />
-निश्चित्य देशेष्वपि दक्षिणेषु ।<br />
-प्रदक्षिणीभूतशिखाकलापो<br />
+आगामिनीमध्वरहव्यसिद्धिं  
+निश्चित्य देशेष्वपि दक्षिणेषु ।  
+प्रदक्षिणीभूतशिखाकलापो  
 ननर्त हर्षादिव हव्यवाहः ॥ ९ ॥
 </p>
 <p class="enpoem">
-Realising that sacrificial oblations<br />
-would soon be offered in the South too,<br />
-the fire danced a jig of joy,<br />
-weaving his mass of flames into worshipful arcs –<br />
+Realising that sacrificial oblations  
+would soon be offered in the South too,  
+the fire danced a jig of joy,  
+weaving his mass of flames into worshipful arcs –  
 or so it seemed.
 <span class="ncol">9</span>
 </p>
@@ -173,17 +173,17 @@ or so it seemed.
 
 <div id="c2_p10" class="poem1">
 <p class="devpoem">
-सुखायमानां सुतजन्मवार्तां<br />
-सहर्षमावेदयते जनाय ।<br />
-अवाञ्छदात्मानमपि प्रदातुं<br />
+सुखायमानां सुतजन्मवार्तां  
+सहर्षमावेदयते जनाय ।  
+अवाञ्छदात्मानमपि प्रदातुं  
 कुतूहली कुन्तलभूमिपालः ॥ १० ॥
 </p>
 <p class="enpoem">
-In his euphoria,<br />
-the Kuntala king<br />
-was ready to give his very self<br />
-to the exultant servants<br />
-bringing the sweet news<br />
+In his euphoria,  
+the Kuntala king  
+was ready to give his very self  
+to the exultant servants  
+bringing the sweet news  
 of his son’s birth.
 <span class="ncol">10</span>
 </p>
@@ -191,17 +191,17 @@ of his son’s birth.
 
 <div id="c2_p11" class="poem1">
 <p class="devpoem">
-विशृङ्खलास्तस्य गिरा निरीयुः<br />
-कारागृहेभ्यो विमतावरोधाः ।<br />
-तुलुष्कबन्दीनिवहाय तूर्ण-<br />
+विशृङ्खलास्तस्य गिरा निरीयुः  
+कारागृहेभ्यो विमतावरोधाः ।  
+तुलुष्कबन्दीनिवहाय तूर्ण-  
 मागामिने दातुमिवावाकाशम् ॥ ११ ॥
 </p>
 <p class="enpoem">
-Upon the Emperor’s orders,<br />
-the womenfolk of the vanquished<br />
-were unshackled and released from their prison cells,<br />
-as if to make room<br />
-for the trillion Tuluṣka wives and daughters,<br />
+Upon the Emperor’s orders,  
+the womenfolk of the vanquished  
+were unshackled and released from their prison cells,  
+as if to make room  
+for the trillion Tuluṣka wives and daughters,  
 soon to arrive.
 <span class="ncol">11</span>
 </p>
@@ -209,17 +209,17 @@ soon to arrive.
 
 <div id="c2_p12" class="poem1">
 <p class="devpoem">
-स्नातस्ततो धौतदुकूलधारी<br />
-वितीर्य भूरि द्रविणं द्विजेभ्यः ।<br />
-महीपतिः पुत्रमुखं दिदृक्षुः<br />
+स्नातस्ततो धौतदुकूलधारी  
+वितीर्य भूरि द्रविणं द्विजेभ्यः ।  
+महीपतिः पुत्रमुखं दिदृक्षुः  
 प्राविक्षदन्तःपुरमात्तहर्षः ॥ १२ ॥
 </p>
 <p class="enpoem">
-Then the King,<br />
-after bathing and dressing in sparkling new silks,<br />
-bestowed lavish gifts upon Brahmins.<br />
-Longing to look upon his new-born son,<br /> 
-he came to his queens’ quarters<br />
+Then the King,  
+after bathing and dressing in sparkling new silks,  
+bestowed lavish gifts upon Brahmins.  
+Longing to look upon his new-born son,   
+he came to his queens’ quarters  
 aquiver with joy.
 <span class="ncol">12</span>
 </p>
@@ -227,17 +227,17 @@ aquiver with joy.
 
 <div id="c2_p13" class="poem1">
 <p class="devpoem">
-अवैक्षत क्षामशरीरयष्टेः<br />
-कुमारमुत्सङ्गगतं स देव्याः ।<br />
-शरत्कृशाया इव शैवलिन्या-<br />
+अवैक्षत क्षामशरीरयष्टेः  
+कुमारमुत्सङ्गगतं स देव्याः ।  
+शरत्कृशाया इव शैवलिन्या-  
 स्तरङ्गलग्नं कलहंसशाबम् ॥ १३ ॥
 </p>
 <p class="enpoem">
-He beheld his son<br />
-rocking in the lap of the Queen,<br />
-her thin frame grown frail,<br />
-like a young *haṃsa*<br />
-bobbing upon the billow of a river<br />
+He beheld his son  
+rocking in the lap of the Queen,  
+her thin frame grown frail,  
+like a young *haṃsa*  
+bobbing upon the billow of a river  
 slimmed by Śarad.
 <span class="ncol">13</span>
 </p>
@@ -245,17 +245,17 @@ slimmed by Śarad.
 
 <div id="c2_p14" class="poem1">
 <p class="devpoem">
-मुहुर्मुहुः पल्लवपाटलेन<br />
-मुष्टीकृतेन द्वितयेन पाण्योः ।<br />
-अरातिलक्ष्मीकचसञ्चयाना-<br />
+मुहुर्मुहुः पल्लवपाटलेन  
+मुष्टीकृतेन द्वितयेन पाण्योः ।  
+अरातिलक्ष्मीकचसञ्चयाना-  
 माकर्षशिक्षामिव शीलयन्तम् ॥ १४ ॥
 </p>
 <p class="enpoem">
-As the child formed fists again and again<br />
-with hands pale pink like fresh shoots,<br />
-it seemed he was practising<br />
-how to wrest from his rivals<br />
-the tutelary goddess of each,<br />
+As the child formed fists again and again  
+with hands pale pink like fresh shoots,  
+it seemed he was practising  
+how to wrest from his rivals  
+the tutelary goddess of each,  
 dragging them by their tightly tied braids.
 <span class="ncol">14</span>
 </p>
@@ -263,15 +263,15 @@ dragging them by their tightly tied braids.
 
 <div id="c2_p15" class="poem1">
 <p class="devpoem">
-अव्याजसौन्दर्यगुणाभिरामं<br />
-कुमारमालोकयतश्चिराय ।<br />
-नृपस्य निष्पन्ददृशो मुहूर्त-<br />
+अव्याजसौन्दर्यगुणाभिरामं  
+कुमारमालोकयतश्चिराय ।  
+नृपस्य निष्पन्ददृशो मुहूर्त-  
 मानन्दबाष्पोऽभवदन्तरायः ॥ १५ ॥
 </p>
 <p class="enpoem">
-A tear of joy for a moment obscured<br />
-the Lord’s long and unblinking gaze<br />
-as he stared at the child he had sired,<br />
+A tear of joy for a moment obscured  
+the Lord’s long and unblinking gaze  
+as he stared at the child he had sired,  
 enthralled by his unadorned beauty.
 <span class="ncol">15</span>
 </p>
@@ -279,9 +279,9 @@ enthralled by his unadorned beauty.
 
 <div id="c2_p16" class="poem1">
 <p class="devpoem">
-आश्लिष्यतस्तस्य दृशा तनूज-<br />
-मन्तः प्रहर्षेण विजृम्भितेन ।<br />
-प्रायः प्रणुन्नैर्बहिरङ्गकेभ्यः<br />
+आश्लिष्यतस्तस्य दृशा तनूज-  
+मन्तः प्रहर्षेण विजृम्भितेन ।  
+प्रायः प्रणुन्नैर्बहिरङ्गकेभ्यः  
 प्रादुर्बभूवे पुलकप्ररोहैः ॥ १६ ॥
 </p>
 <p>
@@ -291,10 +291,10 @@ enthralled by his unadorned beauty.
 </audio> 
 </p>
 <p class="enpoem">
-As the King drank in his son with his eyes,<br />
-the happiness within him swelled to bursting<br />
-and appeared to push out the very hair<br />
-on each part of his body<br />
+As the King drank in his son with his eyes,  
+the happiness within him swelled to bursting  
+and appeared to push out the very hair  
+on each part of his body  
 so that he prickled with goosebumps.
 <span class="ncol">16</span>
 </p>
@@ -302,18 +302,18 @@ so that he prickled with goosebumps.
 
 <div id="c2_p17" class="poem1">
 <p class="devpoem">
-आकम्पयिष्यत्ययमेकवीरः<br />
-संग्रामरङ्गे सकलानरातीन् ।<br />
-इत्येव निश्चित्य स दीर्घदर्शी<br />
+आकम्पयिष्यत्ययमेकवीरः  
+संग्रामरङ्गे सकलानरातीन् ।  
+इत्येव निश्चित्य स दीर्घदर्शी  
 नाम्ना सुतं कम्पन इत्यकार्षीत् ॥ १७ ॥
 </p>
 <p class="enpoem">
-With great prescience<br />
-the King knew that the boy would become<br />
-a warrior matched by none,<br />
-terrorising every one of his enemies<br />
-in the hurly-burly of battle,<br />
-and thus named him Kampana,<br />
+With great prescience  
+the King knew that the boy would become  
+a warrior matched by none,  
+terrorising every one of his enemies  
+in the hurly-burly of battle,  
+and thus named him Kampana,  
 The Terrifying.
 <span class="ncol">17</span>
 </p>
@@ -321,17 +321,17 @@ The Terrifying.
 
 <div id="c2_p18" class="poem1">
 <p class="devpoem">
-क्रमेण धात्रीजनशिक्षितानि<br />
-वचांसि यातानि च मन्थराणि ।<br />
-स्खलत्पदान्यस्य धराधिनाथो<br />
+क्रमेण धात्रीजनशिक्षितानि  
+वचांसि यातानि च मन्थराणि ।  
+स्खलत्पदान्यस्य धराधिनाथो  
 निशम्य दृष्ट्वा च स निर्वृतोऽभूत् ॥ १८ ॥
 </p>
 <p class="enpoem">
-In due course,<br />
-the sight and sound of his son,<br />
-guided by the nurses,<br />
-tottering and tripping over<br />
-his first faltering syllables and steps,<br />
+In due course,  
+the sight and sound of his son,  
+guided by the nurses,  
+tottering and tripping over  
+his first faltering syllables and steps,  
 brought the emperor of the earth true bliss.
 <span class="ncol">18</span>
 </p>
@@ -339,9 +339,9 @@ brought the emperor of the earth true bliss.
 
 <div id="c2_p19" class="poem1">
 <p class="devpoem">
-कलक्वणत्काञ्चनकिङ्किणीकं<br />
-गृहाङ्गणे जानुचरं कुमारम् ।<br />
-आलोकयन्तावमृताम्बुराशे-<br />
+कलक्वणत्काञ्चनकिङ्किणीकं  
+गृहाङ्गणे जानुचरं कुमारम् ।  
+आलोकयन्तावमृताम्बुराशे-  
 र्मग्नाविवान्तः पितरावभूताम् ॥ १९ ॥
 </p>
 <p>
@@ -351,10 +351,10 @@ brought the emperor of the earth true bliss.
 </audio> 
 </p>
 <p class="enpoem">
-Watching their son<br />
-crawling on all fours in the courtyard,<br />
-his baby golden bells babbling blithely,<br />
-his parents felt as if<br />
+Watching their son  
+crawling on all fours in the courtyard,  
+his baby golden bells babbling blithely,  
+his parents felt as if  
 they had dived into a deep ocean of *amṛta*.
 <span class="ncol">19</span>
 </p>
@@ -362,19 +362,19 @@ they had dived into a deep ocean of *amṛta*.
 
 <div id="c2_p20" class="poem1">
 <p class="devpoem">
-पशुपतिरिव नेत्रैः सोमसूर्याग्निरूपै-<br />
-र्नय इव निरपायैः प्राभवोत्साहमन्त्रैः ।<br />
-भव इव पुरुषार्थैर्धर्मकामार्थसंज्ञै-<br />
+पशुपतिरिव नेत्रैः सोमसूर्याग्निरूपै-  
+र्नय इव निरपायैः प्राभवोत्साहमन्त्रैः ।  
+भव इव पुरुषार्थैर्धर्मकामार्थसंज्ञै-  
 स्त्रिभिरपि नरपालस्तैस्तनूजैरभासीत् ॥ २० ॥ मालिनी
 </p>
 <p class="enpoem">
-As Śiva with his triad of eyes –<br />
-the moon, the sun and fire;<br />
-as sovereignty with its inseparable triple supports –<br />
-dominion, determination and counsel;<br />
-as this worldly life with its threefold goals<br />
-*dharma, kāma* and *artha* –<br />
-so the King shone with his three sons<span class="ref"><sup><a epub:type="noteref" href="#c2_en4">4</a></sup></span>.
+As Śiva with his triad of eyes –  
+the moon, the sun and fire;  
+as sovereignty with its inseparable triple supports –  
+dominion, determination and counsel;  
+as this worldly life with its threefold goals  
+*dharma, kāma* and *artha* –  
+so the King shone with his three sons[^4].
 <span class="ncol">20</span>
 </p>
 </div>
