--- a/laxyam/padyam/vIra-kathAH/madhurA-vijayam/raw/canto_6.xhtml
+++ b/laxyam/padyam/vIra-kathAH/madhurA-vijayam/raw/canto_6.xhtml
@@ -10,17 +10,17 @@ xmlns:epub="http://www.idpf.org/2007/ops">
 
 <div id="c6_p1" class="poem1">
 <p class="devpoem">
-अथ वरतनुभिः समं कदाचि-<br />
-द्विरचयितुं कुसुमापचायलीलाम् ।<br />
-प्रमदवनममर्त्यकामिनीभि-<br />
+अथ वरतनुभिः समं कदाचि-  
+द्विरचयितुं कुसुमापचायलीलाम् ।  
+प्रमदवनममर्त्यकामिनीभि-  
 र्हरिरिव नन्दनमासदन्नरेन्द्रः ॥ १ ॥ पुष्पिताग्रा
 </p>
 <p class="enpoem">
-One day thereafter<br />
-the King set out to the pleasure grove<br />
-to pass the time in picking flowers<br />
-with his graceful queens –<br />
-just as the noble Indra sets out for his garden Nandana<br />
+One day thereafter  
+the King set out to the pleasure grove  
+to pass the time in picking flowers  
+with his graceful queens –  
+just as the noble Indra sets out for his garden Nandana  
 with heaven’s beauties.
 <span class="ncol">1</span>
 </p>
@@ -28,18 +28,18 @@ with heaven’s beauties.
 
 <div id="c6_p2" class="poem1">
 <p class="devpoem">
-मुखरितमणिमेखलाकलापाः<br />
-प्रचलितमन्वचलंस्तमायताक्ष्यः ।<br />
-उपवनलतिका इवोपगीत-<br />
+मुखरितमणिमेखलाकलापाः  
+प्रचलितमन्वचलंस्तमायताक्ष्यः ।  
+उपवनलतिका इवोपगीत-  
 भ्रमरकुला मलयाद्रिगन्धवाहम् ॥ २ ॥
 </p>
 <p class="enpoem">
-As he strode ahead,<br />
-the oval-eyed ladies,<br />
-jingling with jewel-girt girdles,<br />
-trailed in his wake –<br />
-just as garden creepers,<br /> 
-humming with bees,<br />
+As he strode ahead,  
+the oval-eyed ladies,  
+jingling with jewel-girt girdles,  
+trailed in his wake –  
+just as garden creepers,   
+humming with bees,  
 trail the Malaya breeze.
 <span class="ncol">2</span>
 </p>
@@ -47,18 +47,18 @@ trail the Malaya breeze.
 
 <div id="c6_p3" class="poem1">
 <p class="devpoem">
-अजनयदवनीश्वरस्य चेत-<br />
-स्यसितदृशां मणिनूपुरप्रणादः ।<br />
-सहपरिचलितप्रसूनकेतो-<br />
+अजनयदवनीश्वरस्य चेत-  
+स्यसितदृशां मणिनूपुरप्रणादः ।  
+सहपरिचलितप्रसूनकेतो-  
 रवनमदैक्षवचापघोषशङ्काम् ॥ ३ ॥
 </p>
 <p class="enpoem">
-The King mistook<br />
-the peal of the ornamented anklets<br />
-worn by the dark-eyed girls<br />
-for the sound of the sugarcane bow<br />
-as if Kāma,<br />
-moving among them,<br />
+The King mistook  
+the peal of the ornamented anklets  
+worn by the dark-eyed girls  
+for the sound of the sugarcane bow  
+as if Kāma,  
+moving among them,  
 were readying his aim.
 <span class="ncol">3</span>
 </p>
@@ -66,9 +66,9 @@ were readying his aim.
 
 <div id="c6_p4" class="poem1">
 <p class="devpoem">
-अवनिपतिमनु प्रतस्थुषीणां<br />
-हरिणदृशामितरेतरप्रसक्ताः ।<br />
-मधुरसमधुरा गिरस्तदानीं<br />
+अवनिपतिमनु प्रतस्थुषीणां  
+हरिणदृशामितरेतरप्रसक्ताः ।  
+मधुरसमधुरा गिरस्तदानीं  
 बहुविधभङ्गितरङ्गिता बभूवुः ॥ ४ ॥
 </p>
 <p>
@@ -78,10 +78,10 @@ were readying his aim.
 </audio> 
 </p>
 <p class="enpoem">
-As they followed their lord,<br />
-the doe-eyed women,<br />
-voices sweet as seeping honey,<br />
-chattered each to her neighbour,<br />
+As they followed their lord,  
+the doe-eyed women,  
+voices sweet as seeping honey,  
+chattered each to her neighbour,  
 their many-wayed words like waves.
 <span class="ncol">4</span>
 </p>
@@ -89,17 +89,17 @@ their many-wayed words like waves.
 
 <div id="c6_p5" class="poem1">
 <p class="devpoem">
-वरतनु परतः प्रयाहि मन्दं<br />
-हरिणदृशां पुरतः प्रयायिनीनाम् ।<br />
-पथि गतिरयशीर्णहारमुक्ता-<br />
+वरतनु परतः प्रयाहि मन्दं  
+हरिणदृशां पुरतः प्रयायिनीनाम् ।  
+पथि गतिरयशीर्णहारमुक्ता-  
 मणिगणशर्करिले पदं न कुर्याः ॥ ५ ॥
 </p>
 <p class="enpoem">
-‘Step to the side there –<br />
-slowly now, my love!<br />
-Mind you don’t tread here –<br />
-the plenteous pearl necklaces coming loose<br />
-as the doe-eyed women ahead pick up pace<br />
+‘Step to the side there –  
+slowly now, my love!  
+Mind you don’t tread here –  
+the plenteous pearl necklaces coming loose  
+as the doe-eyed women ahead pick up pace  
 are making a gravel of the place.’
 <span class="ncol">5</span>
 </p>
@@ -107,37 +107,37 @@ are making a gravel of the place.’
 
 <div id="c6_p6" class="poem1">
 <p class="devpoem">
-नलिनमुखि न बोधय प्रसुप्ता-<br />
-निह मणिनूपुरशिञ्जितेन हंसान् ।<br />
-द्रुतगमनविघातमाचरेयु-<br />
+नलिनमुखि न बोधय प्रसुप्ता-  
+निह मणिनूपुरशिञ्जितेन हंसान् ।  
+द्रुतगमनविघातमाचरेयु-  
 र्नियतममी तव पादपद्मलग्नाः ॥ ६ ॥
 </p>
 <p class="enpoem">
-‘Look out, lady of the lotus face!<br />
-Don’t awaken the *haṃsas*<br />
-fast asleep here<br />
-with the ringing of your jewelled anklets.<br />
-They’d be sure to cling to your feet,<br />
-which look so like lotuses,<br />
-and stop you from hurrying ahead.’<span class="ref"><sup><a epub:type="noteref" href="#c6_en1">1</a></sup></span>
+‘Look out, lady of the lotus face!  
+Don’t awaken the *haṃsas*  
+fast asleep here  
+with the ringing of your jewelled anklets.  
+They’d be sure to cling to your feet,  
+which look so like lotuses,  
+and stop you from hurrying ahead.’[^1]
 <span class="ncol">6</span>
 </p>
 </div>
 
 <div id="c6_p7" class="poem1">
 <p class="devpoem">
-करनखरमरीचिमञ्जरीभि-<br />
-र्हतहृदयो जलशङ्क‍या कुरङ्गः ।<br />
-अनुपतति विलोकयैकवारं<br />
+करनखरमरीचिमञ्जरीभि-  
+र्हतहृदयो जलशङ्क‍या कुरङ्गः ।  
+अनुपतति विलोकयैकवारं  
 सखि नियतं स निवर्तते विलक्षः ॥ ७ ॥
 </p>
 <p class="enpoem">
-‘An antelope is following you,<br />
-hopelessly hypnotised<br />
-by the shimmering sheen of your fingernails,<br />
-which he takes to be water.<br />
-Oh do have a look, dear!<br />
-He has scampered off,<br />
+‘An antelope is following you,  
+hopelessly hypnotised  
+by the shimmering sheen of your fingernails,  
+which he takes to be water.  
+Oh do have a look, dear!  
+He has scampered off,  
 evidently embarrassed.’
 <span class="ncol">7</span>
 </p>
@@ -145,19 +145,19 @@ evidently embarrassed.’
 
 <div id="c6_p8" class="poem1">
 <p class="devpoem">
-शशिमुखि शशिकान्तकुट्टिमेषु<br />
-स्खलनभिया न पदात् पदं प्रयासि ।<br />
-इयमिह वदनानुबिम्बराजि-<br />
+शशिमुखि शशिकान्तकुट्टिमेषु  
+स्खलनभिया न पदात् पदं प्रयासि ।  
+इयमिह वदनानुबिम्बराजि-  
 स्तव न पुनर्नवपङ्कजोपाहरः ॥ ८ ॥
 </p>
 <p class="enpoem">
-‘Is it for fear of slipping<br />
-on the moonstone-paved path,<br />
-my moon-faced girl,<br />
-that you falter over footstep after footstep?<span class="ref"><sup><a epub:type="noteref" href="#c6_en2">2</a></sup></span><br />
-And this is the reflection<br />
-repeated over and over<br />
-of your own face;<br />
+‘Is it for fear of slipping  
+on the moonstone-paved path,  
+my moon-faced girl,  
+that you falter over footstep after footstep?[^2]  
+And this is the reflection  
+repeated over and over  
+of your own face;  
 not a fresh offering of blown lotus flowers.’
 <span class="ncol">8</span>
 </p>
@@ -170,17 +170,17 @@ Kampa playing games with his wives in a lake.
 
 <div id="c6_p9" class="poem1">
 <p class="devpoem">
-अवनिपतिरसिक्त दीर्घिकायां<br />
-मुखकमलं सलिलेन साभिलाषम् ।<br />
-किमपि समधिकार्द्रपक्ष्मलेखं<br />
+अवनिपतिरसिक्त दीर्घिकायां  
+मुखकमलं सलिलेन साभिलाषम् ।  
+किमपि समधिकार्द्रपक्ष्मलेखं  
 वदनमभूदरुणेक्षणं परस्याः ॥ ९ ॥
 </p>
 <p class="enpoem">
-The King,<br />
-lusting after one girl,<br />
-splashed her lotus face with water.<br />
-But it was another whose<br />
-eyelashes ran wet<br />
+The King,  
+lusting after one girl,  
+splashed her lotus face with water.  
+But it was another whose  
+eyelashes ran wet  
 and eyes turned red.
 <span class="ncol">9</span>
 </p>
@@ -188,16 +188,16 @@ and eyes turned red.
 
 <div id="c6_p10" class="poem1">
 <p class="devpoem">
-सलिलहतिभियापवृत्तगात्र्याः<br />
-प्रचलितवेण्यपराङ्गकं परस्याः ।<br />
-धरणिपतिरमंस्त मीनकेतोः<br />
+सलिलहतिभियापवृत्तगात्र्याः  
+प्रचलितवेण्यपराङ्गकं परस्याः ।  
+धरणिपतिरमंस्त मीनकेतोः  
 फलकमुपाहितखड्गवल्लरीकम् ॥१० ॥
 </p>
 <p class="enpoem">
-As another girl turned away,<br />
-fearing a slap of water,<br />
-the King believed the braid whipping across her back<br />
-was the fish-bannered Kāma’s sword<br />
+As another girl turned away,  
+fearing a slap of water,  
+the King believed the braid whipping across her back  
+was the fish-bannered Kāma’s sword  
 swinging across his shield.
 <span class="ncol">10</span>
 </p>
@@ -205,16 +205,16 @@ swinging across his shield.
 
 <div id="c6_p11" class="poem1">
 <p class="devpoem">
-विशदमधरमक्ष्यनञ्जनाभं<br />
-विगतललाम वितन्वती ललाटम् ।<br />
-रतिरिव जलकेलिरङ्गनाना-<br />
+विशदमधरमक्ष्यनञ्जनाभं  
+विगतललाम वितन्वती ललाटम् ।  
+रतिरिव जलकेलिरङ्गनाना-  
 मवनिपतेः स्पृहणियतामयासीत् ॥ ११ ॥
 </p>
 <p class="enpoem">
-Wiping the paint from his wives’ lips,<br />
-the alluring collyrium from their eyes<br />
-and the decorative dot forthwith from their foreheads –<br />
-just as lovemaking does –<br />
+Wiping the paint from his wives’ lips,  
+the alluring collyrium from their eyes  
+and the decorative dot forthwith from their foreheads –  
+just as lovemaking does –  
 these watersports enthralled the King.
 <span class="ncol">11</span>
 </p>
@@ -222,9 +222,9 @@ these watersports enthralled the King.
 
 <div id="c6_p12" class="poem1">
 <p class="devpoem">
-अपि दयिततमेन वारिताभि-<br />
-र्गृहसरसो विजहे न वारि ताभिः ।<br />
-परिलुलितललामचर्चिकाभि-<br />
+अपि दयिततमेन वारिताभि-  
+र्गृहसरसो विजहे न वारि ताभिः ।  
+परिलुलितललामचर्चिकाभि-  
 र्विहृतिरसान्महिलामचर्चिकाभिः ॥ १२ ॥
 </p>
 <p>
@@ -234,9 +234,9 @@ these watersports enthralled the King.
 </audio> 
 </p>
 <p class="enpoem">
-Though many a time did their beloved ask,<br />
-they left not their much-loved bask,<br />
-their *tilaka* and sandal paste in every way faded,<br />
+Though many a time did their beloved ask,  
+they left not their much-loved bask,  
+their *tilaka* and sandal paste in every way faded,  
 those beautiful wives of his in no way jaded.
 <span class="ncol">12</span>
 </p>
@@ -244,16 +244,16 @@ those beautiful wives of his in no way jaded.
 
 <div id="c6_p13" class="poem1">
 <p class="devpoem">
-अथ विहरणखेदमन्थराभिः<br />
-सह निरगात्सरसो नृपः प्रियाभिः ।<br />
-कलशजलनिधेरिवाप्सरोभि-<br />
+अथ विहरणखेदमन्थराभिः  
+सह निरगात्सरसो नृपः प्रियाभिः ।  
+कलशजलनिधेरिवाप्सरोभि-  
 र्विबुधतरुर्मथनश्रमालसाभिः ॥ १३ ॥
 </p>
 <p class="enpoem">
-At length from the water the Lord with his lovers emerged<br />
-after their energetic play exhausted,<br />
-just as<br />
-from the milk sea the divine tree with the *apsarases* surfaced<br />
+At length from the water the Lord with his lovers emerged  
+after their energetic play exhausted,  
+just as  
+from the milk sea the divine tree with the *apsarases* surfaced  
 after such frenetic churning fatigued.
 <span class="ncol">13</span>
 </p>
@@ -261,17 +261,17 @@ after such frenetic churning fatigued.
 
 <div id="c6_p14" class="poem1">
 <p class="devpoem">
-चिकुरनियमनेषु कामिनीना-<br />
-मभिनववस्त्रपरिग्रहान्तरेषु ।<br />
-अभिमतपददर्शनैरयत्नै-<br />
+चिकुरनियमनेषु कामिनीना-  
+मभिनववस्त्रपरिग्रहान्तरेषु ।  
+अभिमतपददर्शनैरयत्नै-  
 रतिमदनं स्वममंस्त कम्पराजः ॥ १४ ॥
 </p>
 <p class="enpoem">
-As his voluptuous wives tied their hair<br />
-and changed into fresh clothes,<br />
-King Kampa considered himself luckier than Kāma<br />
-to be granted a glimpse<br />
-of those spots he longed to see,<br />
+As his voluptuous wives tied their hair  
+and changed into fresh clothes,  
+King Kampa considered himself luckier than Kāma  
+to be granted a glimpse  
+of those spots he longed to see,  
 without lifting a finger.
 <span class="ncol">14</span>
 </p>
@@ -279,18 +279,18 @@ without lifting a finger.
 
 <div id="c6_p15" class="poem1">
 <p class="devpoem">
-ततः सैरन्ध्रीभिः कृतसमुचिताकल्परचनः<br />
-पुरन्ध्रीभिः सार्धं समधिगतशुद्धान्तवसतिः ।<br />
-त्रयीगीतं तेजस्त्रिपुरहरमाराध्य विधिव-<br />
+ततः सैरन्ध्रीभिः कृतसमुचिताकल्परचनः  
+पुरन्ध्रीभिः सार्धं समधिगतशुद्धान्तवसतिः ।  
+त्रयीगीतं तेजस्त्रिपुरहरमाराध्य विधिव-  
 द्यथार्हैर्व्यापारैर्नरपतिरहःशेषमनयत् ॥ १५ ॥ शिखरिणी
 </p>
 <p class="enpoem">
-Then the King, suitably attired by the dress-maidens,<br />
-entered the inner quarters with the eldest matrons.<br />
-There he worshipped,<br />
-in accordance with *śāstra*,<br />
-the divine light to whom the triple *Vedas* pay tribute,<br />
-tormentor of Tripura<span class="ref"><sup><a epub:type="noteref" href="#c6_en3">3</a></sup></span>,<br />
+Then the King, suitably attired by the dress-maidens,  
+entered the inner quarters with the eldest matrons.  
+There he worshipped,  
+in accordance with *śāstra*,  
+the divine light to whom the triple *Vedas* pay tribute,  
+tormentor of Tripura[^3],  
 and spent the rest of the day in fitting occupations.
 <span class="ncol">15</span>
 </p>
