--- a/laxyam/padyam/vIra-kathAH/madhurA-vijayam/raw/canto_8.xhtml
+++ b/laxyam/padyam/vIra-kathAH/madhurA-vijayam/raw/canto_8.xhtml
@@ -10,17 +10,17 @@ xmlns:epub="http://www.idpf.org/2007/ops">
 
 <div id="c8_p1" class="poem1">
 <p class="devpoem">
-अधिरङ्गमवाप्तयोगनिद्रं<br />
-हरिमुद्वेजयतीति जातभीतिः ।<br />
-पतितं मुहुरिष्टकानिकायं<br />
+अधिरङ्गमवाप्तयोगनिद्रं  
+हरिमुद्वेजयतीति जातभीतिः ।  
+पतितं मुहुरिष्टकानिकायं  
 फणचक्रेण निवारयत्यहीन्द्रः ॥ १ ॥ औपच्छन्दसिकम्
 </p>
 <p class="enpoem">
-‘In Śrīraṅga,<br />
-Śeṣa, king of snakes,<br />
-fearing lest Viṣṇu his master<br />
-be rudely awoken from meditative slumber,<br />
-shields him from the broken bricks that keep falling<br />
+‘In Śrīraṅga,  
+Śeṣa, king of snakes,  
+fearing lest Viṣṇu his master  
+be rudely awoken from meditative slumber,  
+shields him from the broken bricks that keep falling  
 with his thousandfold hoods.
 <span class="ncol">1</span>
 </p>
@@ -28,16 +28,16 @@ with his thousandfold hoods.
 
 <div id="c8_p2" class="poem1">
 <p class="devpoem">
-घुणजग्धकवाटसम्पुटानि<br />
-स्फुटदूर्वाङ्कुरसन्धिमण्डपानि ।<br />
-श्लथगर्भगृहाणि वीक्ष्य दूये<br />
+घुणजग्धकवाटसम्पुटानि  
+स्फुटदूर्वाङ्कुरसन्धिमण्डपानि ।  
+श्लथगर्भगृहाणि वीक्ष्य दूये  
 भृशमन्यान्यपि देवताकुलानि ॥ २ ॥
 </p>
 <p class="enpoem">
-‘Other temples too –<br />
-shutter-doors devoured by woodworm,<br />
-festival halls with *dūrvā* grass sprouting boldly from each crack,<br />
-sacredmost shrines crumbling –<br />
+‘Other temples too –  
+shutter-doors devoured by woodworm,  
+festival halls with *dūrvā* grass sprouting boldly from each crack,  
+sacredmost shrines crumbling –  
 drive me to tears when I see them.
 <span class="ncol">2</span>
 </p>
@@ -45,17 +45,17 @@ drive me to tears when I see them.
 
 <div id="c8_p3" class="poem1">
 <p class="devpoem">
-सतताध्वरधूमसौरभैः प्राङ्<br />
-निगमोद्घोषणवद्भिरग्रहारैः ।<br />
-अधुनाजनि विस्रमांसगन्धै-<br />
+सतताध्वरधूमसौरभैः प्राङ्  
+निगमोद्घोषणवद्भिरग्रहारैः ।  
+अधुनाजनि विस्रमांसगन्धै-  
 रधिकक्षीबतुलुष्कसिंहनादैः ॥ ३ ॥
 </p>
 <p class="enpoem">
-‘Earlier, *agrahāras* were filled<br />
-with the scented smoke of continuous sacrifice,<br />
-with the sound of Vedic chanting.<br />
-Now, they are swamped<br />
-with the stink of raw meat,<br />
+‘Earlier, *agrahāras* were filled  
+with the scented smoke of continuous sacrifice,  
+with the sound of Vedic chanting.  
+Now, they are swamped  
+with the stink of raw meat,  
 with the drunken roars of inebriate Turks.
 <span class="ncol">3</span>
 </p>
@@ -63,9 +63,9 @@ with the drunken roars of inebriate Turks.
 
 <div id="c8_p4" class="poem1">
 <p class="devpoem">
-मधुरोपवनं निरीक्ष्य दूये<br />
-बहुशः खण्डितनालिकेरषण्डम् ।<br />
-परितो नृकरोटिकोटिहार-<br />
+मधुरोपवनं निरीक्ष्य दूये  
+बहुशः खण्डितनालिकेरषण्डम् ।  
+परितो नृकरोटिकोटिहार-  
 प्रचलच्छूलपरम्परापरीतम् ॥ ४ ॥
 </p>
 <p>
@@ -75,12 +75,12 @@ with the drunken roars of inebriate Turks.
 </audio> 
 </p>
 <p class="enpoem">
-‘In Madhurā’s gardens<br />
-great swathes of coconut groves have been cut down<br />
-and all about<br />
-serried spikes stand<br />
-swaying under the hundreds of long-dead human heads<br />
-strung together.<br />
+‘In Madhurā’s gardens  
+great swathes of coconut groves have been cut down  
+and all about  
+serried spikes stand  
+swaying under the hundreds of long-dead human heads  
+strung together.  
 To see it is to weep.
 <span class="ncol">4</span>
 </p>
@@ -88,15 +88,15 @@ To see it is to weep.
 
 <div id="c8_p5" class="poem1">
 <p class="devpoem">
-परितस्तततन्तुवायतन्तु-<br />
-व्यतिषङ्गाज्जनितानि जालकानि ।<br />
-पुरगोपुरसालभञ्जिकानां<br />
+परितस्तततन्तुवायतन्तु-  
+व्यतिषङ्गाज्जनितानि जालकानि ।  
+पुरगोपुरसालभञ्जिकानां  
 दधते चीनपटावगुण्ठनत्वम् ॥ ५ ॥
 </p>
 <p class="enpoem">
-‘Webs wound skilfully by web-weaving spiders,<br />
-silken strands stretching in all directions,<br />
-robe the carven ladies that crown the town’s gates<br />
+‘Webs wound skilfully by web-weaving spiders,  
+silken strands stretching in all directions,  
+robe the carven ladies that crown the town’s gates  
 in delicate Chinese cloth.
 <span class="ncol">5</span>
 </p>
@@ -104,17 +104,17 @@ in delicate Chinese cloth.
 
 <div id="c8_p6" class="poem1">
 <p class="devpoem">
-न तथा कटुघूत्कृताद्व्यथा मे<br />
-हृदि जीर्णोपवनेषु घूकलोकात् ।<br />
-परिशीलितपारसीकवाग्भ्यो<br />
+न तथा कटुघूत्कृताद्व्यथा मे  
+हृदि जीर्णोपवनेषु घूकलोकात् ।  
+परिशीलितपारसीकवाग्भ्यो  
 यवनानां भवने यथा शुकेभ्यः ॥ ६ ॥
 </p>
 <p class="enpoem">
-‘It is not the harsh hoots<br />
-of owl broods<br />
-in gardens run wild,<br />
-so much as the parrots practising Persian<br />
-in the dwellings of the foreign princelings<br /> 
+‘It is not the harsh hoots  
+of owl broods  
+in gardens run wild,  
+so much as the parrots practising Persian  
+in the dwellings of the foreign princelings   
 that torments me.
 <span class="ncol">6</span>
 </p>
@@ -122,17 +122,17 @@ that torments me.
 
 <div id="c8_p7" class="poem1">
 <p class="devpoem">
-स्तनचन्दनपाण्डु ताम्रपर्ण्या-<br />
-स्तरुणीनामभवत् पुरा यदम्भः ।<br />
-तदसृग्भिरुपैति शोणिमानं<br />
+स्तनचन्दनपाण्डु ताम्रपर्ण्या-  
+स्तरुणीनामभवत् पुरा यदम्भः ।  
+तदसृग्भिरुपैति शोणिमानं  
 निहतानामभितो गवां नृशंसैः ॥ ७ ॥
 </p>
 <p class="enpoem">
-‘The water of the Tāmraparṇī,<br />
-which used to run white-yellow<br />
-as it washed the sandal paste from young women’s breasts,<br />
-has been stained red<br />
-with the blood flowing from cows<br />
+‘The water of the Tāmraparṇī,  
+which used to run white-yellow  
+as it washed the sandal paste from young women’s breasts,  
+has been stained red  
+with the blood flowing from cows  
 cruelly slaughtered upon her banks.
 <span class="ncol">7</span>
 </p>
@@ -140,16 +140,16 @@ cruelly slaughtered upon her banks.
 
 <div id="c8_p8" class="poem1">
 <p class="devpoem">
-सुवते न यथापुरं वसूनि<br />
-क्षितयो वर्षति पूर्ववन्न शक्रः ।<br />
-शमनोऽपि जनं नयत्यकाण्डे<br />
+सुवते न यथापुरं वसूनि  
+क्षितयो वर्षति पूर्ववन्न शक्रः ।  
+शमनोऽपि जनं नयत्यकाण्डे  
 विषयेऽस्मिन् यवनैर्हतावशिष्टम् ॥ ८ ॥
 </p>
 <p class="enpoem">
-‘The fields no longer favour us with rich crops.<br />  
-Indra sends not showers as he used to.<br />
-In this land,<br />
-even Death drags people away before their time –<br />
+‘The fields no longer favour us with rich crops.    
+Indra sends not showers as he used to.  
+In this land,  
+even Death drags people away before their time –  
 those not yet massacred by the foreigners.
 <span class="ncol">8</span>
 </p>
@@ -157,19 +157,19 @@ those not yet massacred by the foreigners.
 
 <div id="c8_p9" class="poem1">
 <p class="devpoem">
-श्रुतिरस्तमिता नयः प्रलीनो<br />
-विरता धर्मकथा च्युतं चरित्रम् ।<br />
-सुकृतं गतमाभिजात्यमस्तं<br />
+श्रुतिरस्तमिता नयः प्रलीनो  
+विरता धर्मकथा च्युतं चरित्रम् ।  
+सुकृतं गतमाभिजात्यमस्तं  
 किमिवान्यत् कलिरेक एव धन्यः ॥ ९ ॥
 </p>
 <p class="enpoem">
-‘The *Veda* has sunk.<br />
-The rule of law has fled.<br />
-The very word *dharma* has disappeared.<br />
-Virtue has vanished.<br />
-Merit has away flit.<br />
-Nobility has faded.<br />
-What else is there to say?<br />
+‘The *Veda* has sunk.  
+The rule of law has fled.  
+The very word *dharma* has disappeared.  
+Virtue has vanished.  
+Merit has away flit.  
+Nobility has faded.  
+What else is there to say?  
 Kali alone flourishes.’
 <span class="ncol">9</span>
 </p>
@@ -177,17 +177,17 @@ Kali alone flourishes.’
 
 <div id="c8_p10" class="poem1">
 <p class="devpoem">
-इति सा निखिलं निवेद्य राज्ञे<br />
-यवनानां जनगर्हितं चरित्रम् ।<br />
-अतिभीषणमात्मनः प्रभावात्<br />
+इति सा निखिलं निवेद्य राज्ञे  
+यवनानां जनगर्हितं चरित्रम् ।  
+अतिभीषणमात्मनः प्रभावात्  
 कमपि प्रादुरभावयत् कृपाणम् ।। १० ॥
 </p>
 <p class="enpoem">
-After thus listing to the King<br />
-the Yavanas’ catalogue of crimes<br />
-condemned by all,<br />
-she<span class="ref"><sup><a epub:type="noteref" href="#c8_en1">1</a></sup></span> produced<br />
-with her prodigious powers<br />
+After thus listing to the King  
+the Yavanas’ catalogue of crimes  
+condemned by all,  
+she[^1] produced  
+with her prodigious powers  
 a terrifying sword.
 <span class="ncol">10</span>
 </p>
@@ -195,9 +195,9 @@ a terrifying sword.
 
 <div id="c8_p11" class="poem1">
 <p class="devpoem">
-तमरातिनराधिनाथनारी-<br />
-नयनाम्भःकणपातहेतुभूतम् ।<br /> 
-प्रभुरुन्मिषितस्वरोषवह्ने-<br />
+तमरातिनराधिनाथनारी-  
+नयनाम्भःकणपातहेतुभूतम् ।   
+प्रभुरुन्मिषितस्वरोषवह्ने-  
 रधिकोद्दामममंस्त धूमदण्डम् ॥ ११ ॥
 </p>
 <p>
@@ -207,11 +207,11 @@ a terrifying sword.
 </audio> 
 </p>
 <p class="enpoem">
-To the King,<br />
-it was a fearsome column of smoke curling up<br />
-from the fire of his flaring anger,<br />
-making tears drip from<br />
-the lashes of the ladies of lords<br />
+To the King,  
+it was a fearsome column of smoke curling up  
+from the fire of his flaring anger,  
+making tears drip from  
+the lashes of the ladies of lords  
 who raised against him swords.
 <span class="ncol">11</span>
 </p>
@@ -219,18 +219,18 @@ who raised against him swords.
 
 <div id="c8_p12" class="poem1">
 <p class="devpoem">
-प्रणयागतचोलपाण्ड्यलक्ष्मी-<br />
-श्रवणेन्दीवरमालिकायमानम् ।<br />
-विरचय्य पुरः कृपाणमेषा<br />
+प्रणयागतचोलपाण्ड्यलक्ष्मी-  
+श्रवणेन्दीवरमालिकायमानम् ।  
+विरचय्य पुरः कृपाणमेषा  
 पुनरप्याह पुरन्दराभमेनम् ॥ १२ ॥
 </p>
 <p class="enpoem">
-This sword was a string of blue lilies adorning the ears<br />
+This sword was a string of blue lilies adorning the ears  
 of the tutelary goddesses of the Colas 
-and Pāṇḍyas,<br />
-who had turned to Kampa in their love.<br />
-Placing it before the doughty king,<br />
-daring as Indra, destroyer of cities,<br />
+and Pāṇḍyas,  
+who had turned to Kampa in their love.  
+Placing it before the doughty king,  
+daring as Indra, destroyer of cities,  
 she spoke once again.
 <span class="ncol">12</span>
 </p>
@@ -238,17 +238,17 @@ she spoke once again.
 
 <div id="c8_p13" class="poem1">
 <p class="devpoem">
-नरनाथ पुरा कृपाणमेनं<br />
-विरचय्याखिलदेवतायुधांशैः ।<br />
-उपदीकृतवान् पिनाकपाणे-<br />
+नरनाथ पुरा कृपाणमेनं  
+विरचय्याखिलदेवतायुधांशैः ।  
+उपदीकृतवान् पिनाकपाणे-  
 र्दनुजानां विजयाय विश्वकर्मा ॥ १३ ॥
 </p>
 <p class="enpoem">
-‘Long ago,<br />
-O King of Karṇāṭa,<br />
-Viśvakarmā fashioned this sword<br />
-with elements from each of the gods’ weapons,<br />
-and presented it to Śiva<br />
+‘Long ago,  
+O King of Karṇāṭa,  
+Viśvakarmā fashioned this sword  
+with elements from each of the gods’ weapons,  
+and presented it to Śiva  
 to defeat the *dānavas*.
 <span class="ncol">13</span>
 </p>
@@ -256,17 +256,17 @@ to defeat the *dānavas*.
 
 <div id="c8_p14" class="poem1">
 <p class="devpoem">
-अमुमुग्रतपःकृतप्रसादः<br />
-प्रददौ पाण्ड्यनृपाय सोऽपि देवः ।<br />
-यमुपेत्य चिरेण तस्य वंश्याः<br />
+अमुमुग्रतपःकृतप्रसादः  
+प्रददौ पाण्ड्यनृपाय सोऽपि देवः ।  
+यमुपेत्य चिरेण तस्य वंश्याः  
 पृथिवीमप्रतिशासनामशासन् ॥ १४ ॥
 </p>
 <p class="enpoem">
-‘Śiva in turn presented it to the Pāṇḍya king,<br />
-pleased with the severity of his *tapas*.<br />
-Once in possession of the sword,<br />
-his descendants governed the land<br />
-with none to gainsay their governance<br />
+‘Śiva in turn presented it to the Pāṇḍya king,  
+pleased with the severity of his *tapas*.  
+Once in possession of the sword,  
+his descendants governed the land  
+with none to gainsay their governance  
 for many a year.
 <span class="ncol">14</span>
 </p>
@@ -274,15 +274,15 @@ for many a year.
 
 <div id="c8_p15" class="poem1">
 <p class="devpoem">
-अथ कालवशेन पाण्ड्यवंश्यान्<br />
-गतवीर्यानवधार्य कुम्भजन्मा ।<br />
-मनुजेश्वर मण्डलाग्रमेनं<br />
+अथ कालवशेन पाण्ड्यवंश्यान्  
+गतवीर्यानवधार्य कुम्भजन्मा ।  
+मनुजेश्वर मण्डलाग्रमेनं  
 भवते प्रेषितवान् महाभुजाय ।। १५ ॥
 </p>
 <p class="enpoem">
 ‘Seeing the Pāṇḍyas’ 
-power disappear over time,<br />
-Agastya has now sent this sword to you,<br />
+power disappear over time,  
+Agastya has now sent this sword to you,  
 Your Most Mighty Majesty.
 <span class="ncol">15</span>
 </p>
@@ -290,20 +290,20 @@ Your Most Mighty Majesty.
 
 <div id="c8_p16" class="poem1">
 <p class="devpoem">
-अमुनाशु विशस्य दक्षिणस्यां<br />
-मधुरायां पुरि कंसवन्नृशंसम् ।<br />
-यवनाधिपतिं बलोत्तरस्त्वं<br />
+अमुनाशु विशस्य दक्षिणस्यां  
+मधुरायां पुरि कंसवन्नृशंसम् ।  
+यवनाधिपतिं बलोत्तरस्त्वं  
 विदधीथाः स्फुटमच्युतावतारम् ॥ १६ ॥
 </p>
 <p class="enpoem">
-‘With this sword straightaway eliminate<br />
-the Yavana potentate –<br />
-cruel as Kaṃsa –<br />
-in the Madhurā of the South,<br />
-accompanied by your valour,<br />
-as Kṛṣṇa was by Balarāma.<br />
-Let the world know you<br />
-as the incarnation of the god himself!’<span class="ref"><sup><a epub:type="noteref" href="#c8_en2">2</a></sup></span>
+‘With this sword straightaway eliminate  
+the Yavana potentate –  
+cruel as Kaṃsa –  
+in the Madhurā of the South,  
+accompanied by your valour,  
+as Kṛṣṇa was by Balarāma.  
+Let the world know you  
+as the incarnation of the god himself!’[^2]
 <span class="ncol">16</span>
 </p>
 </div>
