--- a/laxyam/padyam/vIra-kathAH/madhurA-vijayam/raw/canto_9.xhtml
+++ b/laxyam/padyam/vIra-kathAH/madhurA-vijayam/raw/canto_9.xhtml
@@ -10,16 +10,16 @@ xmlns:epub="http://www.idpf.org/2007/ops">
 
 <div id="c9_p1" class="poem1">
 <p class="devpoem">
-मुक्ताफलैर्वीरकृपाणलेखा-<br />
-विभिन्नगन्धद्विपकुम्भमुक्तैः ।<br />
-रक्तारुणैस्तत्क्षणघट्टनोत्थ-<br />
+मुक्ताफलैर्वीरकृपाणलेखा-  
+विभिन्नगन्धद्विपकुम्भमुक्तैः ।  
+रक्तारुणैस्तत्क्षणघट्टनोत्थ-  
 स्फुलिङ्गसङ्घातमतिर्वितेने ।। १ ॥ उपजातिः
 </p>
 <p class="enpoem">
-The blood-stained pearls flooding forth<br />
-as warriors sliced open rutting elephants’ temples<br />
-with sharp swords<br />
-seemed to be a shower of sparks<br />
+The blood-stained pearls flooding forth  
+as warriors sliced open rutting elephants’ temples  
+with sharp swords  
+seemed to be a shower of sparks  
 as iron struck bone.
 <span class="ncol">1</span>
 </p>
@@ -27,9 +27,9 @@ as iron struck bone.
 
 <div id="c9_p2" class="poem1">
 <p class="devpoem">
-निशाचराः केचन कुञ्जराणां<br />
-कुम्भस्थलान्निःसृतमास्रपूरम् ।<br />
-निष्ठ्यूतमुक्तामणयः सहर्षं<br />
+निशाचराः केचन कुञ्जराणां  
+कुम्भस्थलान्निःसृतमास्रपूरम् ।  
+निष्ठ्यूतमुक्तामणयः सहर्षं  
 चुचूषुरुत्पुष्करनालदण्डैः ॥ २ ॥
 </p>
 <p>
@@ -39,10 +39,10 @@ as iron struck bone.
 </audio> 
 </p>
 <p class="enpoem">
-A rabble of night-roaming *rākṣasas*,<br />
-inverting elephant trunks to make straws,<br />
-slurped with satisfied burps<br />
-the blood streaming from the beasts’ temples,<br />
+A rabble of night-roaming *rākṣasas*,  
+inverting elephant trunks to make straws,  
+slurped with satisfied burps  
+the blood streaming from the beasts’ temples,  
 spitting out the pearls.
 <span class="ncol">2</span>
 </p>
@@ -50,17 +50,17 @@ spitting out the pearls.
 
 <div id="c9_p3" class="poem1">
 <p class="devpoem">
-जिघत्सयान्तः पतगैः प्रविष्टैः<br />
-प्रस्पन्दमानं कुणपं द्विपस्य ।<br />
-समीपमासाद्य सजीवबुद्ध्या<br />
+जिघत्सयान्तः पतगैः प्रविष्टैः  
+प्रस्पन्दमानं कुणपं द्विपस्य ।  
+समीपमासाद्य सजीवबुद्ध्या  
 व्यसुं सतृष्णोऽपि जहौ सृगालः ॥ ३ ॥
 </p>
 <p class="enpoem">
-A jackal came up to the corpse of an elephant,<br />
-but bolted,<br />
-though it was dead and he was ravenous –<br />
-for the birds that had entered it searching for spoils<br />
-were setting it ashudder<br />
+A jackal came up to the corpse of an elephant,  
+but bolted,  
+though it was dead and he was ravenous –  
+for the birds that had entered it searching for spoils  
+were setting it ashudder  
 as if with new life.
 <span class="ncol">3</span>
 </p>
@@ -68,17 +68,17 @@ as if with new life.
 
 <div id="c9_p4" class="poem1">
 <p class="devpoem">
-द्विषा सरोषेण पृषत्कवर्षै-<br />
-र्निषूदितः कोऽप्यमरत्वमेत्य ।<br />
-चकार तस्योपरि पुष्पवर्षं<br />
+द्विषा सरोषेण पृषत्कवर्षै-  
+र्निषूदितः कोऽप्यमरत्वमेत्य ।  
+चकार तस्योपरि पुष्पवर्षं  
 सहर्षमुद्घोषितचाटुवादः ॥ ४ ॥
 </p>
 <p class="enpoem">
-One man –<br />
-slain by an enemy soldier<br />
-showering arrows upon him in seething anger –<br />
-now become immortal,<br />
-showered flowers upon his assassin<br />
+One man –  
+slain by an enemy soldier  
+showering arrows upon him in seething anger –  
+now become immortal,  
+showered flowers upon his assassin  
 singing his praises ecstatically.
 <span class="ncol">4</span>
 </p>
@@ -86,17 +86,17 @@ singing his praises ecstatically.
 
 <div id="c9_p5" class="poem1">
 <p class="devpoem">
-कुम्भेषु भिन्दन् नृपतिर्द्विपेन्द्रान् <br />
-मुक्ताफलैः शर्करिलान्तराभिः ।<br />
-प्रावर्तयद्रक्ततरङ्गिणीभिः<br />
+कुम्भेषु भिन्दन् नृपतिर्द्विपेन्द्रान्   
+मुक्ताफलैः शर्करिलान्तराभिः ।  
+प्रावर्तयद्रक्ततरङ्गिणीभिः  
 परःशताः संयति ताम्रपर्णीः ॥ ५ ॥
 </p>
 <p class="enpoem">
-The King,<br />
-tearing apart the temples of the mightiest of elephants,<br />
-made hundreds of Tāmraparṇī rivers flow<br />
-all over the battlefield<br />
-as streams of blood gushed forth<br />
+The King,  
+tearing apart the temples of the mightiest of elephants,  
+made hundreds of Tāmraparṇī rivers flow  
+all over the battlefield  
+as streams of blood gushed forth  
 pebbled with pearls.
 <span class="ncol">5</span>
 </p>
@@ -104,26 +104,26 @@ pebbled with pearls.
 
 <div id="c9_p6" class="poem1">
 <p class="devpoem">
-तेन द्विपास्तोमरिणा विभिन्नाः<br />
-कुम्भस्थलैरुज्झितमौक्तिकौघैः ।<br />
-क्रौञ्चस्य जह्रुर्गुहशक्तिघात-<br />
+तेन द्विपास्तोमरिणा विभिन्नाः  
+कुम्भस्थलैरुज्झितमौक्तिकौघैः ।  
+क्रौञ्चस्य जह्रुर्गुहशक्तिघात-  
 प्रकीर्णहंसप्रकरस्य शोभाम् ॥ ६ ॥
 </p>
 <p class="enpoem">
-As his javelin rent each elephant’s temples,<br />
-letting loose a flood of pearls,<br />
-the beasts came to resemble Mount Krauñca<br />
-when Kumāra’s spear pierced it clean through<br />
-setting forth a stream of *haṃsas*.<span class="ref"><sup><a epub:type="noteref" href="#c9_en1">1</a></sup></span>
+As his javelin rent each elephant’s temples,  
+letting loose a flood of pearls,  
+the beasts came to resemble Mount Krauñca  
+when Kumāra’s spear pierced it clean through  
+setting forth a stream of *haṃsas*.[^1]
 <span class="ncol">6</span>
 </p>
 </div>
 
 <div id="c9_p7" class="poem1">
 <p class="devpoem">
-शूरस्तथा प्राहृत मुद्गरेण<br />
-शिरस्त्रवन्ति द्विषतां शिरांसि ।<br />
-यथा विनिर्यन्नयनानि तानि<br />
+शूरस्तथा प्राहृत मुद्गरेण  
+शिरस्त्रवन्ति द्विषतां शिरांसि ।  
+यथा विनिर्यन्नयनानि तानि  
 मङ्क्षु न्यमाङ्क्षुः स्वशरीर एव ॥ ७ ॥
 </p>
 <p>
@@ -133,10 +133,10 @@ setting forth a stream of *haṃsas*.<span class="ref"><sup><a epub:type="notere
 </audio> 
 </p>
 <p class="enpoem">
-With such force did the warrior<br />
-hurl his hammer upon the helmets of his foes<br />
-that their heads,<br />
-eyes bulging out,<br />
+With such force did the warrior  
+hurl his hammer upon the helmets of his foes  
+that their heads,  
+eyes bulging out,  
 sunk with a plunk into their necks.
 <span class="ncol">7</span>
 </p>
@@ -144,17 +144,17 @@ sunk with a plunk into their necks.
 
 <div id="c9_p8" class="poem1">
 <p class="devpoem">
-ततस्तुलुष्कान् युधि कान्दिशीका-<br />
-नालोक्य विष्फारितघोरशार्ङ्गः ।<br />
-कम्पक्षितीन्द्रं यवनाधिराजः<br />
+ततस्तुलुष्कान् युधि कान्दिशीका-  
+नालोक्य विष्फारितघोरशार्ङ्गः ।  
+कम्पक्षितीन्द्रं यवनाधिराजः  
 प्रत्यग्रहीद्वृत्र इवामरेन्द्रम् ॥ ८ ॥
 </p>
 <p class="enpoem">
-At that moment,<br />
-seeing his men running helter-skelter across the battlefield,<br />
-the Yavana king,<br />
-twanging his fearsome bow,<br />
-attacked King Kampa<br />
+At that moment,  
+seeing his men running helter-skelter across the battlefield,  
+the Yavana king,  
+twanging his fearsome bow,  
+attacked King Kampa  
 as Vṛtra did Indra, king of the gods.
 <span class="ncol">8</span>
 </p>
@@ -162,18 +162,18 @@ as Vṛtra did Indra, king of the gods.
 
 <div id="c9_p9" class="poem1">
 <p class="devpoem">
-आस्फाल्यमानस्य च तेन गाढं<br />
-शार्ङ्गस्य मौर्वीनिनदश्चकार ।<br />
-चिरात् परित्यज्य तमुच्चलन्त्या<br />
+आस्फाल्यमानस्य च तेन गाढं  
+शार्ङ्गस्य मौर्वीनिनदश्चकार ।  
+चिरात् परित्यज्य तमुच्चलन्त्या  
 जयश्रियो नूपुरघोषशङ्काम् ॥ ९ ॥
 </p>
 <p class="enpoem">
-The sound from the Sultan’s bowstring<br />
-as he twanged it forcefully<br />
-seemed to be the sudden trill of anklets<br />
-as his goddess of victory<br />
-after so many years<br />
-started from his side,<br /> 
+The sound from the Sultan’s bowstring  
+as he twanged it forcefully  
+seemed to be the sudden trill of anklets  
+as his goddess of victory  
+after so many years  
+started from his side,   
 abandoning him.
 <span class="ncol">9</span>
 </p>
@@ -181,15 +181,15 @@ abandoning him.
 
 <div id="c9_p10" class="poem1">
 <p class="devpoem">
-बाणा निरस्ता यवनेन तस्मि-<br />
-न्नपाङ्गपाता इव वीरलक्ष्म्याः ।<br />
-कम्पेश्वरेणाप्यभिपारसीकं<br />
+बाणा निरस्ता यवनेन तस्मि-  
+न्नपाङ्गपाता इव वीरलक्ष्म्याः ।  
+कम्पेश्वरेणाप्यभिपारसीकं  
 शराः कटाक्षा इव कालरात्रेः ॥ १० ॥
 </p>
 <p class="enpoem">
-The Yavana lord’s arrows accosted the King<br />
-like the come-hither glances of Victory herself;<br />
-but those fired by Kampa assailed the Persian<br />
+The Yavana lord’s arrows accosted the King  
+like the come-hither glances of Victory herself;  
+but those fired by Kampa assailed the Persian  
 like the menacing leer of dusky Death.
 <span class="ncol">10</span>
 </p>
@@ -197,18 +197,18 @@ like the menacing leer of dusky Death.
 
 <div id="c9_p11" class="poem1">
 <p class="devpoem">
-स केरलप्राणमरुद्भुजङ्गान्<br />
-वन्यावनीन्द्रद्रुमदाववह्नीन् ।<br />
-अन्ध्रान्धकारक्षयतिग्मभासो<br />
+स केरलप्राणमरुद्भुजङ्गान्  
+वन्यावनीन्द्रद्रुमदाववह्नीन् ।  
+अन्ध्रान्धकारक्षयतिग्मभासो  
 बाणानमुञ्चद्यवने नरेन्द्रः ।। ११ ॥
 </p>
 <p class="enpoem">
-Arrows that had served as<br />
-snakes to the vital air of the Kerala king,<br />
-wildfires to the flourishing tree<br /> 
-that was the forest chief, Campa,<br />
-suns destroying the grand dragoons of darkness,<br /> 
-the Andhras –<br />
+Arrows that had served as  
+snakes to the vital air of the Kerala king,  
+wildfires to the flourishing tree   
+that was the forest chief, Campa,  
+suns destroying the grand dragoons of darkness,   
+the Andhras –  
 such arrows did the King let loose upon the Sultan.
 <span class="ncol">11</span>
 </p>
@@ -216,18 +216,18 @@ such arrows did the King let loose upon the Sultan.
 
 <div id="c9_p12" class="poem1">
 <p class="devpoem">
-क्षतानि यान्यस्य शरैः शरीरे<br />
-चकार वीरस्य तुलुष्कवीरः ।<br />
-वितेनिरे तानि नखाङ्कशङ्कां<br />
+क्षतानि यान्यस्य शरैः शरीरे  
+चकार वीरस्य तुलुष्कवीरः ।  
+वितेनिरे तानि नखाङ्कशङ्कां  
 जयश्रियो भोगसमुत्सुकायाः ॥ १२ ॥
 </p>
 <p class="enpoem">
-The wounds wrought<br />
-by the Tuluṣka warrior’s arrows<br />
-upon that warrior’s limbs<br />
-made it seem as though<br />
-the goddess of victory<br />
-ardently awaiting their lovemaking<br />
+The wounds wrought  
+by the Tuluṣka warrior’s arrows  
+upon that warrior’s limbs  
+made it seem as though  
+the goddess of victory  
+ardently awaiting their lovemaking  
 had pricked him with her sharp-tipped nails.
 <span class="ncol">12</span>
 </p>
@@ -235,9 +235,9 @@ had pricked him with her sharp-tipped nails.
 
 <div id="c9_p13" class="poem1">
 <p class="devpoem">
-उदग्रमग्रे यवनाधिभर्तुः<br />
-साक्षात् कलेर्मौलिमिवाशुगेन ।<br />
-स मङ्क्षु सार्धं जयकाङ्क्षितेन<br />
+उदग्रमग्रे यवनाधिभर्तुः  
+साक्षात् कलेर्मौलिमिवाशुगेन ।  
+स मङ्क्षु सार्धं जयकाङ्क्षितेन  
 ध्वाङ्क्षध्वजं ध्वंसयति स्म धन्वी ॥ १३ ॥
 </p>
 <p>
@@ -247,11 +247,11 @@ had pricked him with her sharp-tipped nails.
 </audio> 
 </p>
 <p class="enpoem">
-In a split second<br />
-with a single shaft<br />
-did the bowman break the crow-blazoned banner<br />
-flying high before the Yavana emperor<br />
-as though it were the very head of Kali –<br />
+In a split second  
+with a single shaft  
+did the bowman break the crow-blazoned banner  
+flying high before the Yavana emperor  
+as though it were the very head of Kali –  
 and with it all his hopes of victory.
 <span class="ncol">13</span>
 </p>
@@ -259,34 +259,34 @@ and with it all his hopes of victory.
 
 <div id="c9_p14" class="poem1">
 <p class="devpoem">
-अमर्षितस्याथ पृषत्कवर्षं<br />
-विमुञ्चतो विद्विषतः शरेण ।<br />
-स कार्मुकज्यामलुनात् तुलुष्क-<br />
+अमर्षितस्याथ पृषत्कवर्षं  
+विमुञ्चतो विद्विषतः शरेण ।  
+स कार्मुकज्यामलुनात् तुलुष्क-  
 राज्यश्रियो मङ्गलसूत्रकल्पाम् ॥ १४ ॥
 </p>
 <p class="enpoem">
-As his rival rained arrows upon him<br />
-in feverish fury,<br />
-the King severed with his own arrow<br />
-the Turk’s bow string,<br />
-as though it were the sacred marital chord<br />
-worn by the goddess of his reign.<span class="ref"><sup><a epub:type="noteref" href="#c9_en2">2</a></sup></span>
+As his rival rained arrows upon him  
+in feverish fury,  
+the King severed with his own arrow  
+the Turk’s bow string,  
+as though it were the sacred marital chord  
+worn by the goddess of his reign.[^2]
 <span class="ncol">14</span>
 </p>
 </div>
 
 <div id="c9_p15" class="poem1">
 <p class="devpoem">
-विहाय शार्ङ्गं धनुरिद्धरोष-<br />
-स्तुलुष्कवीरस्तरवारिमुग्रम् ।<br />
-तुरङ्गपर्याणनिबद्धवर्ध्रा-<br />
+विहाय शार्ङ्गं धनुरिद्धरोष-  
+स्तुलुष्कवीरस्तरवारिमुग्रम् ।  
+तुरङ्गपर्याणनिबद्धवर्ध्रा-  
 विलम्बिनं सत्वरमुज्जहार ॥ १५ ॥
 </p>
 <p class="enpoem">
-The stouthearted Sultan,<br />
-incandescent with ire,<br />
-flung aside his horn-carved bow<br />
-and at once seized a fearsome sword<br />
+The stouthearted Sultan,  
+incandescent with ire,  
+flung aside his horn-carved bow  
+and at once seized a fearsome sword  
 hanging by a strap from his saddle.
 <span class="ncol">15</span>
 </p>
@@ -294,15 +294,15 @@ hanging by a strap from his saddle.
 
 <div id="c9_p16" class="poem1">
 <p class="devpoem">
-अथाग्रहीत् कम्पनृपस्तमेव<br />
-कौक्षेयकं कालकरालरूपम् ।<br />
-व्यापादनार्थं यवनेश्वरस्य<br />
+अथाग्रहीत् कम्पनृपस्तमेव  
+कौक्षेयकं कालकरालरूपम् ।  
+व्यापादनार्थं यवनेश्वरस्य  
 यः प्रेषितः प्राक् कलशोद्भवेन ॥ १६ ॥
 </p>
 <p class="enpoem">
-King Kampa in turn took hold of that sword<br />
-sent to him afore by Agastya<br />
-to vanquish the Yavana king,<br />
+King Kampa in turn took hold of that sword  
+sent to him afore by Agastya  
+to vanquish the Yavana king,  
 a blade dreadful as the dark lord of death.
 <span class="ncol">16</span>
 </p>
@@ -310,15 +310,15 @@ a blade dreadful as the dark lord of death.
 
 <div id="c9_p17" class="poem1">
 <p class="devpoem">
-स वञ्चयंस्तत्तरवारिधारां<br />
-धाराविशेषप्रवणोपवाह्यः ।<br />
-अशातयत् तस्य शिरो निमेषा-<br />
+स वञ्चयंस्तत्तरवारिधारां  
+धाराविशेषप्रवणोपवाह्यः ।  
+अशातयत् तस्य शिरो निमेषा-  
 दनेन कर्णाटकुलप्रदीपः ॥ १७ ॥
 </p>
 <p class="enpoem">
-The light of the Karṇāṭas, Kampa,<br />
-riding his horse at a great gallop,<br />
-lopped off the Sultan’s head with his sword,<br />
+The light of the Karṇāṭas, Kampa,  
+riding his horse at a great gallop,  
+lopped off the Sultan’s head with his sword,  
 dodging his foe’s whetted blade.
 <span class="ncol">17</span>
 </p>
@@ -326,17 +326,17 @@ dodging his foe’s whetted blade.
 
 <div id="c9_p18" class="poem1">
 <p class="devpoem">
-अज्ञातसेवोचितचाटुवादं<br />
-तुलुष्कसाम्राज्यकृताभिषेकम् ।<br />
-दिवौकसामप्यकृतप्रणामं<br />
+अज्ञातसेवोचितचाटुवादं  
+तुलुष्कसाम्राज्यकृताभिषेकम् ।  
+दिवौकसामप्यकृतप्रणामं  
 भूमौ सुरत्राणशिरः पपात ॥ १८ ॥
 </p>
 <p class="enpoem">
-Never had the Sultan's head sunk to sycophancy.<br />
-Gracing the imperial crown of the Tuluṣka Empire,<br />
-not once had it bowed, even before the gods.<br />
-Down<br />
-to the ground<br />
+Never had the Sultan's head sunk to sycophancy.  
+Gracing the imperial crown of the Tuluṣka Empire,  
+not once had it bowed, even before the gods.  
+Down  
+to the ground  
 it fell.
 <span class="ncol">18</span>
 </p>
@@ -344,15 +344,15 @@ it fell.
 
 <div id="c9_p19" class="poem1">
 <p class="devpoem">
-च्युतेऽपि शीर्षे चलिताश्ववल्गा-<br />
-नियन्त्रणव्यापृतवामपाणिम् ।<br />
-प्रतिप्रहारप्रसृतान्यहस्तं<br />
+च्युतेऽपि शीर्षे चलिताश्ववल्गा-  
+नियन्त्रणव्यापृतवामपाणिम् ।  
+प्रतिप्रहारप्रसृतान्यहस्तं  
 वीरः कबन्धं द्विषतोऽभ्यनन्दीत् ॥ १९ ॥
 </p>
 <p class="enpoem">
-The courageous king cheered his rival:<br />
-though the corpse’s head was rolling in the dust,<br />
-the left hand continued to restrain his speeding steed,<br />
+The courageous king cheered his rival:  
+though the corpse’s head was rolling in the dust,  
+the left hand continued to restrain his speeding steed,  
 while the right stretched forth to settle the score.
 <span class="ncol">19</span>
 </p>
@@ -360,15 +360,15 @@ while the right stretched forth to settle the score.
 
 <div id="c9_p20" class="poem1">
 <p class="devpoem">
-प्रशान्तदावेव वनान्तलक्ष्मी-<br />
-र्गतोपरागा गगनस्थलीव ।<br />
-कलिन्दजा मर्दितकालियेव<br />
+प्रशान्तदावेव वनान्तलक्ष्मी-  
+र्गतोपरागा गगनस्थलीव ।  
+कलिन्दजा मर्दितकालियेव  
 दिग्दक्षिणासीत् क्षतपारसीका ॥ २० ॥
 </p>
 <p class="enpoem">
-Like a beautiful grove after a wildfire has finally tired,<br />
-like the expanse of the sky when an eclipse has passed,<br />
-like Yamunā, Kalinda’s daughter, once Kāliya was killed<span class="ref"><sup><a epub:type="noteref" href="#c9_en3">3</a></sup></span> –<br />
+Like a beautiful grove after a wildfire has finally tired,  
+like the expanse of the sky when an eclipse has passed,  
+like Yamunā, Kalinda’s daughter, once Kāliya was killed[^3] –  
 thus shone the South now that the Persian lay slain.
 <span class="ncol">20</span>
 </p>
